<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.leonet.eclub.ui.auth.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        tools:context=".ui.auth.login.LoginFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/_5sdp"
            android:text="@string/login_title"
            android:textColor="@color/textcolor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:lineSpacingExtra="@dimen/_8sdp"
            android:text="@string/email"
            android:textColor="@color/textcolor"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edt_back"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:lineSpacingExtra="@dimen/_8sdp"
            android:text="@string/password"
            android:textColor="@color/textcolor"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/edt_back"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/_7sdp"
            android:paddingBottom="@dimen/_7sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/btn_black"
            android:lineSpacingExtra="@dimen/_8sdp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/_8sdp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/textcolor"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/_2sdp"
            android:text="@string/login_msg"
            android:textColor="@color/textcolor"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/_8sdp"
            android:text="@string/not_yet_trained_in_eclub"
            android:textColor="@color/textcolor"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/btn_pink"
            android:lineSpacingExtra="@dimen/_8sdp"
            android:text="Create an account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>
</layout>